# django-learning-platform

./: .gitignore  README.md  manage.py  pyproject.toml
django_learning_platform/: asgi.py  settings.py  urls.py  wsgi.py
lessons/: admin.py  models.py  serializers.py  urls.py  views.py
lessons/migrations/: 0001_initial.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
users/migrations/: 0001_initial.py
