[tool.poetry]
name = "django-learning-platform"
version = "0.0.1"
description = ""
authors = ["hoopengo <hoopengo@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
